<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="377dp"
        android:layout_height="52dp"
        android:layout_marginTop="44dp"
        android:hint="Email"
        app:layout_constraintTop_toTopOf="@id/sendee"
        tools:layout_editor_absoluteX="7dp"
        tools:ignore="MissingConstraints" />

    <com.jetradarmobile.snowfall.SnowfallView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <EditText
        android:id="@+id/sendee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="Nickname Must be unique"
        app:layout_constraintBottom_toTopOf="@id/passwordSignUp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignUp" />

    <EditText
        android:id="@+id/passwordSignUp"
        android:layout_width="401dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:hint="Password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="7dp"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintTop_toBottomOf="@id/sendee"
        tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="71dp"
            android:layout_marginEnd="8dp"
            android:text="Register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="71dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="Login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.671"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>